--- a/ansible/collect/pre.yml
+++ b/ansible/collect/pre.yml
@@ -1,47 +1,47 @@
 - name: Derive DFaaS k6 settings from benchmark config
   ansible.builtin.set_fact:
-    dfaas_k6_host: >-
+    peva_faas_k6_host: >-
       {{
         (
-          (benchmark_config.plugin_settings | default({})).dfaas | default({})
+          (benchmark_config.plugin_settings | default({})).peva_faas | default({})
         )
         .k6_host | default('')
       }}
-    dfaas_k6_user: >-
+    peva_faas_k6_user: >-
       {{
         (
-          (benchmark_config.plugin_settings | default({})).dfaas | default({})
+          (benchmark_config.plugin_settings | default({})).peva_faas | default({})
         )
         .k6_user | default('ubuntu')
       }}
-    dfaas_k6_ssh_key: >-
+    peva_faas_k6_ssh_key: >-
       {{
         (
-          (benchmark_config.plugin_settings | default({})).dfaas | default({})
+          (benchmark_config.plugin_settings | default({})).peva_faas | default({})
         )
         .k6_ssh_key | default('')
       }}
-    dfaas_k6_port: >-
+    peva_faas_k6_port: >-
       {{
         (
-          (benchmark_config.plugin_settings | default({})).dfaas | default({})
+          (benchmark_config.plugin_settings | default({})).peva_faas | default({})
         )
         .k6_port | default(22)
       }}
-    dfaas_k6_workspace_root: >-
+    peva_faas_k6_workspace_root: >-
       {{
         (
-          (benchmark_config.plugin_settings | default({})).dfaas | default({})
+          (benchmark_config.plugin_settings | default({})).peva_faas | default({})
         )
-        .k6_workspace_root | default('/home/ubuntu/.dfaas-k6')
+        .k6_workspace_root | default('/home/ubuntu/.peva_faas-k6')
       }}
-    dfaas_k6_ssh_key_path: >-
+    peva_faas_k6_ssh_key_path: >-
       {{
         (
-          (dfaas_k6_ssh_key | default('') | length > 0)
+          (peva_faas_k6_ssh_key | default('') | length > 0)
         )
         | ternary(
-            dfaas_k6_ssh_key | regex_replace('^~', lookup('env', 'HOME')),
+            peva_faas_k6_ssh_key | regex_replace('^~', lookup('env', 'HOME')),
             ''
           )
       }}
@@ -50,19 +50,19 @@
 
 - name: Register DFaaS k6 host
   ansible.builtin.add_host:
-    name: "dfaas_k6"
-    ansible_host: "{{ dfaas_k6_host }}"
-    ansible_user: "{{ dfaas_k6_user }}"
-    ansible_port: "{{ dfaas_k6_port }}"
+    name: "peva_faas_k6"
+    ansible_host: "{{ peva_faas_k6_host }}"
+    ansible_user: "{{ peva_faas_k6_user }}"
+    ansible_port: "{{ peva_faas_k6_port }}"
     ansible_ssh_private_key_file: >-
       {{
-        (dfaas_k6_ssh_key_path | length > 0)
-        | ternary(dfaas_k6_ssh_key_path, omit)
+        (peva_faas_k6_ssh_key_path | length > 0)
+        | ternary(peva_faas_k6_ssh_key_path, omit)
       }}
     ansible_ssh_common_args: "-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null"
-    k6_workspace_root: "{{ dfaas_k6_workspace_root }}"
+    k6_workspace_root: "{{ peva_faas_k6_workspace_root }}"
   delegate_to: localhost
   run_once: true
   when:
-    - dfaas_k6_host is defined
-    - dfaas_k6_host | length > 0
+    - peva_faas_k6_host is defined
+    - peva_faas_k6_host | length > 0
