--- a/ansible/tasks/setup_target_tasks.yml
+++ b/ansible/tasks/setup_target_tasks.yml
@@ -109,7 +109,7 @@
     openfaas_functions: >-
       {{
         (
-          (benchmark_config.plugin_settings | default({})).dfaas | default({})
+          (benchmark_config.plugin_settings | default({})).peva_faas | default({})
         )
         .functions | default([])
         | map(attribute='name')
