--- a/ansible/teardown_k6.yml
+++ b/ansible/teardown_k6.yml
@@ -6,7 +6,7 @@
     k6_workspace_root: >-
       {{
         (ansible_user == 'root')
-        | ternary('/root/.dfaas-k6', '/home/' ~ ansible_user ~ '/.dfaas-k6')
+        | ternary('/root/.peva_faas-k6', '/home/' ~ ansible_user ~ '/.peva_faas-k6')
       }}
     target_name: ""
     run_id: ""
